Reetan.Nayak Dev 25/force-app/main/default/objects/Catalog__c/fields/Item_Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Item_Additional_Details__c</fullName>
    <label>Item Additional Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>