Reetan.Nayak Dev 25/force-app/main/default/objects/Catalog__c/fields/Item_Detail__c.field-meta.xml
<CustomField>
    <fullName>Item_Detail__c</fullName>
    <label>Item Detail</label>
    <type>TextArea</type>
</CustomField>