Reetan.Nayak Dev 25/force-app/main/default/objects/Catalog__c/fields/Item_Features__c.field-meta.xml
<CustomField>
    <fullName>Item_Features__c</fullName>
    <label>Item Features</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>