Reetan.Nayak Dev 25/force-app/main/default/objects/Catalog__c/fields/Item_Image__c.field-meta.xml
<CustomField>
    <fullName>Item_Image__c</fullName>
    <label>Item Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>