Reetan.Nayak Dev 25/force-app/main/default/objects/Catalog__c/fields/Item_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Long_Description__c</fullName>
    <label>Item Long Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>