Reetan.Nayak Dev 25/force-app/main/default/objects/Catalog__c/fields/Item_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Model_Number__c</fullName>
    <label>Item Model Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>