Reetan.Nayak Dev 25/force-app/main/default/objects/Catalog__c/fields/Item_MSRP__c.field-meta.xml
<CustomField>
    <fullName>Item_MSRP__c</fullName>
    <label>Item MSRP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>