Reetan.Nayak Dev 25/force-app/main/default/objects/Catalog__c/fields/Item_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Short_Description__c</fullName>
    <label>Item Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>