Reetan.Nayak Dev 25/force-app/main/default/objects/Catalog__c/fields/Item_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Item_Specifications__c</fullName>
    <label>Item Specifications</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>