Reetan.Nayak Dev 25/force-app/main/default/objects/Catalog__c/fields/Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Item_Status__c</fullName>
    <label>Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Published to Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>